refactor: optimize agent files for better Claude comprehension
- Split load-tester.md (1,110→150 lines) into hub + 3 specialized agents:
  - load-tester-k6.md (292 lines): K6, Grafana Cloud, K6 Operator
  - load-tester-gatling.md (270 lines): Scala/Java DSL
  - load-tester-ngrinder.md (375 lines): Groovy, Controller/Agent
- Compress large agent files while preserving all key patterns:
  - anti-bot.md: 950→288 lines
  - ticketing-expert.md: 759→276 lines
  - java-expert.md: 578→282 lines
  - go-expert.md: 511→346 lines
- Add Quick Reference tables to all optimized agents
- Update README: 14→17 agents, ~7,800→~5,550 total lines
- All files now under 600 lines (optimal range for Claude)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>